added date time

--- a/css/style.css
+++ b/css/style.css
@@ -38,15 +38,25 @@ RESPONSIVE
 \*----------------------------*/
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 16px;
   color: #444;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0px 0px 15px;
   color: #0b0f28;
   font-weight: 700;
+}
+
+h5.lead {
+  color: white;
+  font-size: 17px;
 }
 
 h1 {
@@ -75,23 +85,25 @@ a {
   transition: 0.3s color;
 }
 
-a:hover, a:focus {
+a:hover,
+a:focus {
   text-decoration: none;
   outline: none;
   color: #dd0a37;
 }
 
-ul, ol {
+ul,
+ol {
   margin: 0;
   padding: 0;
-  list-style: none
+  list-style: none;
 }
 
 .main-btn {
   display: inline-block;
   padding: 14px 50px;
   background: #dd0a37;
-  color: #FFF;
+  color: #fff;
   text-transform: uppercase;
   border: none;
   border-radius: 2px;
@@ -99,8 +111,9 @@ ul, ol {
   transition: 0.3s all;
 }
 
-.main-btn:hover, .main-btn:focus {
-  color: #FFF;
+.main-btn:hover,
+.main-btn:focus {
+  color: #fff;
   opacity: 0.8;
 }
 
@@ -155,7 +168,7 @@ textarea.input {
   overflow: hidden;
 }
 
-.section-title .title>span {
+.section-title .title > span {
   -webkit-transform: translateY(100%);
   -ms-transform: translateY(100%);
   transform: translateY(100%);
@@ -165,7 +178,7 @@ textarea.input {
   transition: 0.6s;
 }
 
-.section-title .title>span.appear {
+.section-title .title > span.appear {
   -webkit-transform: translateY(0%);
   -ms-transform: translateY(0%);
   transform: translateY(0%);
@@ -184,7 +197,7 @@ textarea.input {
   display: inline-block;
 }
 
-.navbar-brand .logo>img {
+.navbar-brand .logo > img {
   max-height: 50px;
 }
 
@@ -212,7 +225,7 @@ textarea.input {
 
 #header {
   position: relative;
-  background-color: #FFF;
+  background-color: #fff;
   border-bottom: 1px solid #0000001a;
   z-index: 80;
   -webkit-transition: 0.3s all;
@@ -225,7 +238,7 @@ textarea.input {
   right: 0;
   top: 0;
   background-color: transparent;
-  border-bottom: 1px solid #DADADA30;
+  border-bottom: 1px solid #dadada30;
 }
 
 #header.fixed-navbar {
@@ -233,7 +246,7 @@ textarea.input {
   left: 0;
   right: 0;
   top: 0;
-  background: #FFF;
+  background: #fff;
   -webkit-box-shadow: 0px 0px 3px #0003;
   box-shadow: 0px 0px 3px #0003;
   border-bottom: none;
@@ -273,7 +286,7 @@ textarea.input {
 }
 
 #header.transparent-navbar .main-nav li a {
-  color: #FFF;
+  color: #fff;
 }
 
 #header.fixed-navbar .main-nav li a {
@@ -290,7 +303,8 @@ textarea.input {
   background: #dd0a37;
 }
 
-.main-nav li a:hover, .main-nav li a:focus {
+.main-nav li a:hover,
+.main-nav li a:focus {
   background-color: transparent;
   color: #dd0a37;
 }
@@ -312,7 +326,7 @@ textarea.input {
 }
 
 #header.transparent-navbar .navbar-toggle {
-  color: #FFF;
+  color: #fff;
 }
 
 #header.fixed-navbar .navbar-toggle {
@@ -326,7 +340,7 @@ textarea.input {
     margin: 0px -15px;
     max-height: 0;
     overflow-y: scroll;
-    background-color: #FFF;
+    background-color: #fff;
     -webkit-transition: 0.3s all;
     transition: 0.3s all;
   }
@@ -339,7 +353,9 @@ textarea.input {
   #header.transparent-navbar .main-nav li a {
     color: #0b0f28;
   }
-  .main-nav li a:hover, .main-nav li a:focus, .main-nav li.active a {
+  .main-nav li a:hover,
+  .main-nav li a:focus,
+  .main-nav li.active a {
     background-color: #dd0a37;
     color: #fff !important;
   }
@@ -371,15 +387,15 @@ textarea.input {
 .home-content h1 {
   text-transform: capitalize;
   font-weight: 900;
-  color: #FFF;
+  color: #fff;
 }
 
 .home-content h4 {
-  color: #FFF;
+  color: #fff;
 }
 
 #page-wrapper {
-  background-color: #F9F9FA;
+  background-color: #f9f9fa;
 }
 
 .page-wrapper-content {
@@ -427,7 +443,7 @@ textarea.input {
   transition: 0.6s transform, 0.6s opacity, 0.6s -webkit-transform;
 }
 
-#galery-owl.owl-theme .owl-item.active+.owl-item .galery-item {
+#galery-owl.owl-theme .owl-item.active + .owl-item .galery-item {
   -webkit-transform-origin: 0% 100%;
   -ms-transform-origin: 0% 100%;
   transform-origin: 0% 100%;
@@ -444,7 +460,7 @@ textarea.input {
   margin-top: 0px;
 }
 
-#galery-owl.owl-theme .owl-nav [class*='owl-'] {
+#galery-owl.owl-theme .owl-nav [class*="owl-"] {
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -474,7 +490,7 @@ textarea.input {
 ===========================================================*/
 
 #speakers {
-  background-color: #F9F9FA;
+  background-color: #f9f9fa;
 }
 
 .speaker {
@@ -500,8 +516,8 @@ textarea.input {
   opacity: 0.8;
 }
 
-.speaker .speaker-img>img {
-  width: 100%
+.speaker .speaker-img > img {
+  width: 100%;
 }
 
 .speaker .speaker-body {
@@ -519,11 +535,11 @@ textarea.input {
   z-index: 20;
 }
 
-.speaker .speaker-content>h2 {
-  color: #FFF;
+.speaker .speaker-content > h2 {
+  color: #fff;
 }
 
-.speaker .speaker-content>span {
+.speaker .speaker-content > span {
   color: #fff;
 }
 
@@ -539,20 +555,20 @@ textarea.input {
   transition: 0.3s all;
 }
 
-.speaker .speaker-social>a {
+.speaker .speaker-social > a {
   display: inline-block;
   width: 40px;
   height: 40px;
   line-height: 40px;
   text-align: center;
-  color: #FFF;
+  color: #fff;
   background: #dd0a37;
   z-index: 15;
   -webkit-transition: 0.3s opacity;
   transition: 0.3s opacity;
 }
 
-.speaker .speaker-social a+a {
+.speaker .speaker-social a + a {
   margin-left: -4px;
   border-left: 1px solid #f8f8ff33;
 }
@@ -596,7 +612,7 @@ textarea.input {
   background-color: #dd0a37 !important;
   border-radius: 50%;
   padding: 0;
-  color: #FFF;
+  color: #fff;
   border: none;
   font-size: 24px;
   z-index: 50;
@@ -611,7 +627,7 @@ textarea.input {
   padding: 30px;
 }
 
-.speaker-modal .speaker-modal-img>img {
+.speaker-modal .speaker-modal-img > img {
   width: 100%;
 }
 
@@ -629,7 +645,7 @@ textarea.input {
   margin-bottom: 30px;
 }
 
-.speaker-modal .speaker-modal-content .speaker-social>a {
+.speaker-modal .speaker-modal-content .speaker-social > a {
   display: inline-block;
   width: 30px;
   height: 30px;
@@ -644,7 +660,7 @@ textarea.input {
   transition: 0.3s opacity;
 }
 
-.speaker-modal .speaker-modal-content .speaker-social>a:hover {
+.speaker-modal .speaker-modal-content .speaker-social > a:hover {
   opacity: 0.8;
 }
 
@@ -652,17 +668,26 @@ textarea.input {
   margin-top: 30px;
 }
 
-.speaker-modal .speaker-modal-content .speaker-events .speaker-event+.speaker-event {
+.speaker-modal
+  .speaker-modal-content
+  .speaker-events
+  .speaker-event
+  + .speaker-event {
   margin-top: 30px;
 }
 
-.speaker-modal .speaker-modal-content .speaker-events .speaker-event>span {
+.speaker-modal .speaker-modal-content .speaker-events .speaker-event > span {
   display: block;
   margin-bottom: 10px;
   font-size: 12px;
 }
 
-.speaker-modal .speaker-modal-content .speaker-events .speaker-event>span strong {
+.speaker-modal
+  .speaker-modal-content
+  .speaker-events
+  .speaker-event
+  > span
+  strong {
   color: #dd0a37;
 }
 
@@ -674,7 +699,7 @@ textarea.input {
   position: relative;
 }
 
-.event+.event {
+.event + .event {
   margin-top: 60px;
 }
 
@@ -692,7 +717,7 @@ textarea.input {
   height: 60px;
 }
 
-.event+.event:before {
+.event + .event:before {
   content: "";
   position: absolute;
   left: 60px;
@@ -727,7 +752,7 @@ textarea.input {
   transform: translateX(-50%);
 }
 
-.event .event-day>div {
+.event .event-day > div {
   position: absolute;
   top: 50%;
   left: 0;
@@ -740,7 +765,7 @@ textarea.input {
 
 .event .event-day .day {
   display: block;
-  color: #FFF;
+  color: #fff;
   text-transform: uppercase;
   font-weight: 700;
   font-size: 40px;
@@ -748,7 +773,7 @@ textarea.input {
 }
 
 .event .event-day .year {
-  color: #FFF;
+  color: #fff;
   text-transform: uppercase;
   font-size: 12px;
 }
@@ -791,7 +816,7 @@ textarea.input {
   opacity: 1;
 }
 
-.sponsor>img {
+.sponsor > img {
   width: 100%;
 }
 
@@ -823,7 +848,7 @@ textarea.input {
 
 .cta-content h2 {
   font-size: 42px;
-  color: #FFF;
+  color: #fff;
   text-transform: capitalize;
 }
 
@@ -836,7 +861,7 @@ textarea.input {
   height: 120px;
   width: 120px;
   margin: 0px auto 60px;
-  background: #FFF;
+  background: #fff;
   border-radius: 50%;
   text-align: center;
   line-height: 120px;
@@ -857,7 +882,7 @@ textarea.input {
   text-align: center;
 }
 
-.footer-brand .logo>img {
+.footer-brand .logo > img {
   max-height: 50px;
 }
 
@@ -897,7 +922,7 @@ textarea.input {
   position: relative;
 }
 
-.blog+.blog {
+.blog + .blog {
   margin-top: 60px;
 }
 
@@ -909,7 +934,7 @@ textarea.input {
   margin-bottom: 30px;
 }
 
-.blog .blog-img>img {
+.blog .blog-img > img {
   width: 100%;
 }
 
@@ -943,7 +968,7 @@ textarea.input {
   display: inline-block;
   padding: 7px 14px;
   background: #dd0a37;
-  color: #FFF;
+  color: #fff;
   text-transform: uppercase;
   border-radius: 2px;
   margin-top: 15px;
@@ -951,7 +976,8 @@ textarea.input {
   transition: 0.3s all;
 }
 
-.blog .blog-content .read-more:hover, .blog .blog-content .read-more:focus {
+.blog .blog-content .read-more:hover,
+.blog .blog-content .read-more:focus {
   opacity: 0.8;
   color: #fff;
 }
@@ -976,7 +1002,7 @@ textarea.input {
   width: 30px;
   height: 30px;
   background-color: #dd0a37;
-  color: #FFF;
+  color: #fff;
   border-radius: 50%;
   line-height: 30px;
   text-align: center;
@@ -1069,13 +1095,13 @@ textarea.input {
   .event:after {
     left: 45px;
   }
-  .event+.event:before {
+  .event + .event:before {
     left: 45px;
   }
 }
 
 @media only screen and (max-width: 480px) {
-  [class*='col-xs'] {
+  [class*="col-xs"] {
     width: 100%;
   }
 }
