--- a/css/style.css
+++ b/css/style.css
@@ -37,93 +37,13 @@ RESPONSIVE
 	typography
 \*----------------------------*/
 
-/* Star background code start */
-/* Star Background Code Author: https://codepen.io/WebSonick/pen/vjmgu */
-
-/* ============================================================================================== 
-SED Innovations
-https://sed.am
-https://mkrtchyan.ga
-================================================================================================= */
-
-
-@keyframes move-twink-back {
-  from {background-position:0 0;}
-  to {background-position:-10000px 5000px;}
-}
-@-webkit-keyframes move-twink-back {
-  from {background-position:0 0;}
-  to {background-position:-10000px 5000px;}
-}
-@-moz-keyframes move-twink-back {
-  from {background-position:0 0;}
-  to {background-position:-10000px 5000px;}
-}
-@-ms-keyframes move-twink-back {
-  from {background-position:0 0;}
-  to {background-position:-10000px 5000px;}
-}
-
-@keyframes move-clouds-back {
-  from {background-position:0 0;}
-  to {background-position:10000px 0;}
-}
-@-webkit-keyframes move-clouds-back {
-  from {background-position:0 0;}
-  to {background-position:10000px 0;}
-}
-@-moz-keyframes move-clouds-back {
-  from {background-position:0 0;}
-  to {background-position:10000px 0;}
-}
-@-ms-keyframes move-clouds-back {
-  from {background-position: 0;}
-  to {background-position:10000px 0;}
-}
-
-.stars, .twinkling, .clouds {
-position:absolute;
-top:0;
-left:0;
-right:0;
-bottom:0;
-width:100%;
-height:100%;
-display:block;
-}
-
-.stars {
-background:#000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
-z-index:0;
-}
-
-.twinkling{
-background:transparent url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat top center;
-z-index:1;
-
--moz-animation:move-twink-back 200s linear infinite;
--ms-animation:move-twink-back 200s linear infinite;
--o-animation:move-twink-back 200s linear infinite;
--webkit-animation:move-twink-back 200s linear infinite;
-animation:move-twink-back 200s linear infinite;
-}
-
-.clouds{
-  background:transparent url(http://www.script-tutorials.com/demos/360/images/clouds3.png) repeat top center;
-  filter: hue-rotate(263deg);
-  z-index:3;
-  -moz-animation:move-clouds-back 100s linear infinite;
-  -ms-animation:move-clouds-back 100s linear infinite;
-  -o-animation:move-clouds-back 100s linear infinite;
-  -webkit-animation:move-clouds-back 100s linear infinite;
-  animation:move-clouds-back 100s linear infinite;
-}
 
 body {
   font-family: "Poppins", sans-serif;
   font-size: 16px;
   color: #fff;
   background-color: #070920;
+  overflow-x: hidden;
 }
 
 h1,
@@ -194,9 +114,10 @@ ol {
   transition: 0.3s all;
 }
 
-.main-btn:hover,
-.main-btn:focus {
-  color: #fff;
+.main-btn:hover {
+  color: white;
+  border: 2px solid #dd0a37;
+  background-color: inherit;
   opacity: 0.8;
 }
 
@@ -1216,4 +1137,87 @@ textarea.input {
   [class*="col-xs"] {
     width: 100%;
   }
+}
+
+
+/* Star background code start */
+/* Star Background Code Author: https://codepen.io/WebSonick/pen/vjmgu */
+
+/* ============================================================================================== 
+SED Innovations
+https://sed.am
+https://mkrtchyan.ga
+================================================================================================= */
+
+
+@keyframes move-twink-back {
+  from {background-position:0 0;}
+  to {background-position:-10000px 5000px;}
+}
+@-webkit-keyframes move-twink-back {
+  from {background-position:0 0;}
+  to {background-position:-10000px 5000px;}
+}
+@-moz-keyframes move-twink-back {
+  from {background-position:0 0;}
+  to {background-position:-10000px 5000px;}
+}
+@-ms-keyframes move-twink-back {
+  from {background-position:0 0;}
+  to {background-position:-10000px 5000px;}
+}
+
+@keyframes move-clouds-back {
+  from {background-position:0 0;}
+  to {background-position:10000px 0;}
+}
+@-webkit-keyframes move-clouds-back {
+  from {background-position:0 0;}
+  to {background-position:10000px 0;}
+}
+@-moz-keyframes move-clouds-back {
+  from {background-position:0 0;}
+  to {background-position:10000px 0;}
+}
+@-ms-keyframes move-clouds-back {
+  from {background-position: 0;}
+  to {background-position:10000px 0;}
+}
+
+.stars, .twinkling, .clouds {
+position:absolute;
+top:0;
+left:0;
+right:0;
+bottom:0;
+width:100%;
+height:100%;
+display:block;
+}
+
+.stars {
+background:#000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
+z-index:1;
+}
+
+.twinkling{
+background:transparent url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat top center;
+z-index:2;
+
+-moz-animation:move-twink-back 200s linear infinite;
+-ms-animation:move-twink-back 200s linear infinite;
+-o-animation:move-twink-back 200s linear infinite;
+-webkit-animation:move-twink-back 200s linear infinite;
+animation:move-twink-back 200s linear infinite;
+}
+
+.clouds{
+  background:transparent url(http://www.script-tutorials.com/demos/360/images/clouds3.png) repeat top center;
+  filter: hue-rotate(263deg);
+  z-index:4;
+  -moz-animation:move-clouds-back 100s linear infinite;
+  -ms-animation:move-clouds-back 100s linear infinite;
+  -o-animation:move-clouds-back 100s linear infinite;
+  -webkit-animation:move-clouds-back 100s linear infinite;
+  animation:move-clouds-back 100s linear infinite;
 }
