regis. hover error corrected

--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,13 @@ a:focus {
   color: #dd0a37;
 }
 
+.main-btn:hover,
+.main-btn:focus {
+  text-decoration: none;
+  outline: none;
+  color: white;
+}
+
 ul,
 ol {
   margin: 0;
