--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@ ol {
   transition: 0.3s all;
   border: 2px solid #dd0a37;
   margin-right: 10px;
+  margin-bottom: 10px;
 }
 
 .main-btn:hover {
