--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,6 @@ RESPONSIVE
 	typography
 \*----------------------------*/
 
-
 body {
   font-family: "Poppins", sans-serif;
   font-size: 16px;
@@ -122,6 +121,7 @@ ol {
   transition: 0.3s all;
   border: 2px solid #dd0a37;
   margin-right: 10px;
+  margin-bottom: 10px;
 }
 
 .main-btn:hover {
@@ -294,6 +294,8 @@ textarea.input {
     transform: translateY(0%);
   }
 }
+
+
 
 @keyframes slide-in {
   from {
