--- a/css/rules.css
+++ b/css/rules.css
@@ -1,6 +1,10 @@
 * {
     box-sizing: border-box;
   }
+
+  html{
+    position:absolute;
+  }
   
   .faq {
     padding: 20px;
@@ -24,7 +28,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: #5BA3BA;
+    background:#196B85;
     border-radius: 5px;
   
   }
@@ -36,7 +40,6 @@
   
   .faq-label-icon {
     padding: 2px 3px;
-    background: #43BEE6;
     border-radius: 6px;
     display: flex;
     justify-content: center;
@@ -53,22 +56,15 @@
     margin-top: 15px;
     height: 0;
     border-radius: 6px;
-    color: rgba(127, 121, 121, 1);
     overflow: hidden;
-  
   }
   
   .faq-answer-content {
-    padding: 10px 0 10px 15px;
-    
-  
+    padding: 10px 10px 10px 15px;
   }
   
   .active {
-  
-    background: #FFFFFF;
     border: 1px solid #C7C4C4;
-    
     height: auto;
     margin-bottom: 25px;
   
@@ -79,12 +75,13 @@
   .global-label{
     width:100%;
     height:25px;
-    border-bottom: solid 2px #C4C1C1;
-    margin-bottom: 35px;
+    margin-bottom: 3%;
   }
   .global-label-text{
-    font-size:18px;
+    font-size:150%;
     color:#196B85;
+    border-bottom: solid 2px #C4C1C1;
+    font-weight:bold;
   }
   
 .navbar-brand {
@@ -100,10 +97,55 @@
   max-height: 50px;
 }
 
+h1{
+  align-items: center;
+  z-index: 998;
+  padding-top: 10%;
+  color:#196B85;
+  font-size:450%;
+  text-align:center;
+  margin:0;
+}
+
+.rules{
+  list-style-type: disc;
+  padding:2% 22% 5%;
+  font-size: 20px;
+}
+
+.rules li{
+  margin-bottom: 1.5%;
+}
+
+::selection {
+  background-color: #196B85;
+}
+
 @media only screen and (max-width: 767px) {
   .navbar-brand {
     margin: 15px 15px;
   }
+
+  .global-label{
+    margin-bottom: 15%;
+  }
+
+  h1{
+    padding-top: 40%;
+    font-size:450%;
+    margin-bottom:5%;
+  }
+
+  .rules{
+    list-style-type: disc;
+    padding:2% 7% 5% 12%;
+    font-size: 20px;
+  }
+
+  .rules li{
+    margin-bottom: 4%;
+  }
+
 }
 
 #header.transparent-navbar:not(.fixed-navbar) .navbar-brand .logo .logo-img {
@@ -276,8 +318,4 @@
     flex-direction: column;
     gap: 1rem;
   }
-}
-h1{
-  align-items: center;
-  z-index: 998;
 }
