--- a/css/style.css
+++ b/css/style.css
@@ -1332,3 +1332,8 @@ https://mkrtchyan.ga
   -webkit-animation: move-clouds-back 100s linear infinite;
   animation: move-clouds-back 100s linear infinite;
 }
+.team{
+  display:flex;
+  align-content: center;
+}
+
