--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,11 @@ ol {
   list-style: none;
 }
 
+.presents{
+  margin-bottom:1%;
+  height: 30px;
+}
+
 .main-btn {
   display: block;
   padding: 14px 50px;
